# Employee-Record-Management-System

./: README.md  employees.json  pyproject.toml
employee_record_management_system/: config.py  employee_manager.py  main.py  models.py
tests/: test_employee_record.py
